adding a description about cog

--- a/pycon-il/Talk.ipynb
+++ b/pycon-il/Talk.ipynb
@@ -684,6 +684,7 @@
     }
    ],
    "source": [
+    "# Crop fetch only the data required to build the raster\n",
     "rs.crop(rs.footprint().buffer(-50000))"
    ]
   },
@@ -795,6 +796,47 @@
     "* Imagine a 1m resultion of entire Israel is about 20 GB\n",
     "* Imagine that you have hundereds of these rasters \n",
     "* We suggest the following to distriute the computation on the rasters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Cloud Optimized GeoTIFF\n",
+    "\n",
+    "A Cloud Optimized GeoTIFF (COG) is a regular GeoTIFF file, aimed at being hosted on a HTTP file server, with an internal organization that enables more efficient workflows on the cloud. It does this by leveraging the ability of clients issuing HTTP GET range requests to ask for just the parts of a file they need.[1](http://www.cogeo.org/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Advatanges:\n",
+    "* Cheap storage such as AWS s3, GFS or Azure Blobs\n",
+    "* Download only the data you need\n",
+    "* Supports legacy software\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "We use COGs to enable distributed computation:\n",
+    "* We split the workload to region.\n",
+    "* Each worker using COG will fetch only the data it needs.\n",
+    "* We destribure the worker on a cluster (they share nothing)"
    ]
   },
   {
