changing the data

--- a/pycon-il/Talk.ipynb
+++ b/pycon-il/Talk.ipynb
@@ -8,11 +8,11 @@
     }
    },
    "source": [
-    "# telluric\n",
+    "#### telluric\n",
     "\n",
     "## Interactive vector and raster geospatial data manipulation in Python\n",
     "\n",
-    "#### Guy Doulberg - 2018-06-05 @ PyCon-IL\n",
+    "#### Guy Doulberg - 2018-06-04 @ PyCon-IL\n",
     "\n",
     "https://github.com/satellogic/telluric-talks\n",
     "\n",
